# Biologging_Toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: timestamps.csv
notebooks/: correlation.npz  create_dataset.ipynb  cube_join_GPM.ipynb  download_GPM.ipynb  download_era.ipynb  graph_spectrogram.ipynb  join_data_dive.ipynb  prepare_runs.ipynb  prey_catch_attempts.ipynb  run_acoustic.ipynb  run_bioluminescence.ipynb  run_density.ipynb  run_dives.ipynb  run_drift_dives.ipynb  run_empirical.ipynb  run_inertial.ipynb  run_lstm.ipynb  run_mixed_layer_depth.ipynb  run_mixed_layer_model.ipynb  run_rain_empirical.ipynb  run_rain_supervisedML.ipynb  run_reduced_dataset.ipynb  run_speed.ipynb  run_surface.ipynb  run_trajectory.ipynb  run_wave_period.ipynb  run_wind_direction.ipynb  spectrogram.ipynb  whale_detection.ipynb
notebooks/.ipynb_checkpoints/: download_era-checkpoint.ipynb  run_rain_empirical-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: wrapper.py
src/Biologging_Toolkit/: wrapper.py
src/Biologging_Toolkit/applications/: Density.py  Drift_Dives.py  Jerk.py  Mixed_Layer_Depth.py  Rain.py  Rain2.py  Speed.py  Surface.py  Trajectory.py  Waves.py  Whales.py  Wind.py  Wind_Direction.py  download_copernicus.py  ml17_280a.nc
src/Biologging_Toolkit/auxiliary/: Api_ERA.py  CFOSAT.py  (+6 more)
src/SES_tags/: wrapper.py
src/plot/: trajectories.py
src/processing/: Acoustic.py  Bioluminescence.py  Inertial.py  Jerk.py
src/utils/: inertial_utils.py
(+50 files in other folders)
